<resources>
    <string name="app_name">SmartButler</string>
    <string name="service_butler">服务管家</string>
    <string name="wechat_selected">微信精选</string>
    <string name="beauty_community">美女社区</string>
    <string name="personal_center">个人中心</string>
    <string name="setting">设置</string>
    <string name="tv_guide">引导页</string>
    <string name="btn_start">进入主页</string>
    <string name="name">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="memory">记住密码</string>
    <string name="forget">忘记密码</string>
    <string name="old">年龄</string>
    <string name="desc">简介</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="pass_again">再输入一次</string>
    <string name="email">邮箱</string>
    <string name="email_success">注册成功需要前往邮箱验证，否则无法登陆！</string>
    <string name="et_null">输入框不能为空</string>
    <string name="desc_null">这个人很懒，什么都没有留下</string>
    <string name="pass_password">两次输入的密码不一致</string>
    <string name="register_success">注册成功</string>
    <string name="register_fail">注册失败:</string>
    <string name="revise_password">修改密码</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="password_again">再次输入密码</string>
    <string name="input_email">请输入邮箱</string>
    <string name="tv_login">正在登录</string>
    <string name="edit_user">编辑资料</string>
    <string name="edit_name">姓名</string>
    <string name="sex">性别</string>
    <string name="define">确认修改</string>
    <string name="express">物流查询</string>
    <string name="exit">退出登录</string>
</resources>
